# eONpy

./: .gitignore  .pre-commit-config.yaml  environment.yml  meson.build  pyproject.toml  readme.org
eONpy/: __init__.py
scripts/: clean_and_convert.el
