[project]
name = "eONpy"
version = "0.0.1"
description = "Python bindings for eon client v2"
authors = [
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]

dependencies = [
    "numpy>=1.26.4",
    "pybind11>=2.12.0",
]
requires-python = ">=3.9"
readme = "readme.md"
license = {text = "MIT"}

[build-system]
# These are all that are seen by pip install .
requires = ["pybind11", "meson-python", "numpy"]
build-backend = "mesonpy"
# Important, tells pip how to install the package
[tool.meson-python.args]
setup = [
'-Dwrap_mode=forcefallback',
# ^-- collects subprojects, see https://github.com/ERGO-Code/HiGHS/pull/1343#discussion_r1252446966
]
# Skip during installation to prevent local RPATH stripping issues
# See: https://github.com/mesonbuild/meson-python/discussions/410
install = ['--skip-subprojects']
# Include so auditwheel on the CI can correctly generate wheels
# See: https://github.com/ERGO-Code/HiGHS/pull/1343/files
dist = ['--include-subprojects']
